@@ -7,80 +7,68 @@
 
 /* XXX: get_ext and split_ext share test data. */
 
-#define TEST_EXT(full, expected_ext, expected_root_len) \
-	int root_len; \
-	const char *ext; \
-	char *const name = strdup(full); \
-	\
-	split_ext(name, &root_len, &ext); \
-	\
-	assert_string_equal(expected_ext, ext); \
-	assert_int_equal((expected_root_len), root_len); \
-	\
-	free(name);
-
 static void
 test_empty_string(void)
 {
-	TEST_EXT("", "", 0);
+	assert_string_equal("", get_ext(""));
 }
 
 static void
 test_empty_extension(void)
 {
-	TEST_EXT("file.", "", 4);
+	assert_string_equal("", get_ext("file."));
 }
 
 static void
 test_empty_root(void)
 {
-	TEST_EXT(".ext", "", 4);
+	assert_string_equal("", get_ext(".ext"));
 }
 
 static void
 test_empty_root_double_extension(void)
 {
-	TEST_EXT(".ext1.ext2", "ext2", 5);
+	assert_string_equal("ext2", get_ext(".ext1.ext2"));
 }
 
 static void
 test_filename_no_extension(void)
 {
-	TEST_EXT("withoutext", "", 10);
+	assert_string_equal("", get_ext("withoutext"));
 }
 
 static void
 test_filename_unary_extension(void)
 {
-	TEST_EXT("with.ext", "ext", 4);
+	assert_string_equal("ext", get_ext("with.ext"));
 }
 
 static void
 test_filename_binary_extensions(void)
 {
-	TEST_EXT("with.two.ext", "ext", 8);
+	assert_string_equal("ext", get_ext("with.two.ext"));
 }
 
 static void
 test_path_no_extension(void)
 {
-	TEST_EXT("/home/user.name/file", "", 20);
+	assert_string_equal("", get_ext("/home/user.name/file"));
 }
 
 static void
 test_path_unary_extension(void)
 {
-	TEST_EXT("/home/user.name/file.ext", "ext", 20);
+	assert_string_equal("ext", get_ext("/home/user.name/file.ext"));
 }
 
 static void
 test_path_binary_extensions(void)
 {
-	TEST_EXT("/home/user.name/file.double.ext", "ext", 27);
+	assert_string_equal("ext", get_ext("/home/user.name/file.double.ext"));
 }
 
 void
-split_ext_tests(void)
+get_ext_tests(void)
 {
 	test_fixture_start();
 
