@@ -2,6 +2,9 @@
 
 	Highlight "highlight clear".
 
+	Fixed extension extraction for column view (wasn't consistent with
+	filename modifiers).  Thanks to ranousse.
+
 0.7.7 to 0.7.8-beta
 
 	Removed ltmain.sh script, which is part of libtool, which is not used
